Bug 1667952: Only crash in DEBUG builds for system API failures in nsPrinterWin. r=jfkthame, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D91752